# xrobot-dronecan-dsdlc

./: .gitignore  README.md  pyproject.toml
src/xrobot_dronecan_dsdlc/: __init__.py  cli.py  cpp.py  dsdl.py  generator.py  naming.py
tests/: test_generation.py
